<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="30dp">

    <TextView
        android:text="@string/info_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="16dp"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <TextView
        android:text="@string/info_addr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="10dp" />

    <TextView
        android:text="@string/info_addr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:textSize="10dp" />

    <TextView
        android:text="@string/info_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView5"
        android:textAlignment="center"
        android:textSize="10dp" />

    <TextView
        android:text="@string/info_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:textAlignment="center"
        android:textSize="10dp" />

    <TextView
        android:text="@string/info_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="10dp" />

    <Button
        android:layout_height="40dp"
        android:id="@+id/button"
        android:background="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_width="40dp"
        android:layout_marginTop="7dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="7dp" />

    <ImageView
        android:src="@drawable/infro_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_marginLeft="200dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>